try to fix carousel on IE11

--- a/themes/charity/static/css/index.css
+++ b/themes/charity/static/css/index.css
@@ -1719,6 +1719,10 @@ sup {
   object-fit: cover;
   border-radius: 4px 4px 0 0; }
 
+.projectImage .compat-object-fit img {
+  opacity: 0;
+  visibility: hidden; }
+
 .carousel h4 {
   margin-top: 20px;
   margin-bottom: 15px; }
